--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 streamlit==1.32.0
-pandas==2.1.4
-numpy==1.26.2
+pandas==2.1.4  # Versión más reciente con wheels precompilados
+numpy==1.26.0  # Versión compatible
 requests==2.31.0
 plotly==5.18.0
-python-dotenv==1.0.0
-matplotlib==3.8.2
-scipy==1.11.4
-pytest==7.4.3
-types-requests==2.31.0.1
+python-dateutil==2.8.2
